fix [#35385] freestyle rendering crash blender